# LLMOps

simple-raqa-bot/: .gitignore  Dockerfile  README.md  app.py  chainlit.md  prompts.py  pyproject.toml  requirements.txt
simple-raqa-bot/aimakerspace/: vectordatabase.py
simple-raqa-bot/aimakerspace/openai_utils/: chatmodel.py  prompts.py
